syntax = "proto3";

package Contracts.Shopping.Queries;

import "Abstractions/Abstractions.proto";

service ShoppingQueryService {
  rpc GetShoppingCartDetails(GetShoppingCartDetailsRequest) returns (Abstractions.Protobuf.GetResponse);
  rpc GetCustomerShoppingCartDetails(GetCustomerShoppingCartDetailsRequest) returns (Abstractions.Protobuf.GetResponse);
  rpc GetPaymentMethodDetails(GetPaymentMethodDetailsRequest) returns (Abstractions.Protobuf.GetResponse);
  rpc GetShoppingCartItemDetails(GetShoppingCartItemDetailsRequest) returns (Abstractions.Protobuf.GetResponse);
  rpc ListPaymentMethodsListItems(ListPaymentMethodsListItemsRequest) returns (Abstractions.Protobuf.ListResponse);
  rpc ListShoppingCartItemsListItems(ListShoppingCartItemsListItemsRequest) returns (Abstractions.Protobuf.ListResponse);
}

//// Requests

message GetShoppingCartDetailsRequest {
  string CartId = 1;
}

message GetCustomerShoppingCartDetailsRequest {
  string CustomerId = 1;
}

message GetShoppingCartItemDetailsRequest {
  string CartId = 1;
  string ItemId = 2;
}

message GetPaymentMethodDetailsRequest {
  string CartId = 1;
  string MethodId = 2;
}

message ListPaymentMethodsListItemsRequest {
  string CartId = 1;
  Abstractions.Protobuf.Paging Paging = 2;
}

message ListShoppingCartItemsListItemsRequest {
  string CartId = 1;
  Abstractions.Protobuf.Paging Paging = 2;
}

//// Projections

// Cart 
message ShoppingCartDetails {
  string CartId = 1;
  string CustomerId = 2;
  string Status = 3;
  Abstractions.Protobuf.Money Total = 4;
}

// Items
message ShoppingCartItemDetails{
  string ItemId = 1;
  string CartId = 2;
  Abstractions.Protobuf.Product Product = 3;
  int32 Quantity = 4;
}

message ShoppingCartItemListItem{
  string ItemId = 1;
  string CartId = 2;
  string ProductName = 3;
  int32 Quantity = 4;
}

// Payment
message PaymentMethodDetails {
  string MethodId = 1;
  string CartId = 2;
  Abstractions.Protobuf.Money Amount = 3;
  Abstractions.Protobuf.PaymentOption Option = 4;
}

message PaymentMethodListItem {
  string MethodId = 1;
  string CartId = 2;
  Abstractions.Protobuf.Money Amount = 3;
  string Option = 4;
}